NLP TP/texts/robotics/robotics.stackexchange_0000051615.txt
Q:

Can't install pydot on MacBook Pro OS 10.8.3

I am trying to install ROS on my MacBook Pro, with OS 10.8.3. The installation will not go beyond the installation of pydot. I first execute the command:
rosdep install --from-paths src --ignore-src --rosdistro groovy -y

Then, after moving through several other installations, the program asks for my password:
executing command [sudo pip install -U pydot]
Password:

After giving my password, the following output is given:
Downloading/unpacking pydot
  Running setup.py egg_info for package pydot
    Couldn't import dot_parser, loading of dot files will not be possible.

Downloading/unpacking pyparsing (from pydot)
  Running setup.py egg_info for package pyparsing
    Traceback (most recent call last):
      File "<string>", line 16, in <module>
      File "/private/tmp/pip-build-root/pyparsing/setup.py", line 9, in <module> 
        from pyparsing import __version__ as pyparsing_version
      File "pyparsing.py", line 629
       nonlocal limit,foundArity
                 ^
SyntaxError: invalid syntax
Complete output from command python setup.py egg_info:
Traceback (most recent call last):

File "<string>", line 16, in <module>

File "/private/tmp/pip-build-root/pyparsing/setup.py", line 9, in <module>

   from pyparsing import __version__ as pyparsing_version

File "pyparsing.py", line 629

  nonlocal limit,foundArity

             ^

SyntaxError: invalid syntax

----------------------------------------
Command python setup.py egg_info failed with error code 1 in /private/tmp/pip-build-root/pyparsing
Storing complete log in /Users/jordanjameson/Library/Logs/pip.log
ERROR: the following rosdeps failed to install
  pip: command [sudo pip install -U pydot] failed

Thanks for any help.

Originally posted by jjameson18 on ROS Answers with karma: 15 on 2013-06-01
Post score: 0

A:

I've just had this problem. The problem is in the version on pyparsing which is 2.0.0 and was designed for python 3.0. To resolve the problem you have to downgrade the pyparsing module. If you actually run this line, it will build pydot:
sudo pip install -U pydot  pyparsing==1.5.7

But I don't know how to pass the parameter "pyparsing==1.5.7" to rosdep. Next time you run rosdep install it will fetch again the same 2.0 version of pyparsing.
This is what I did:
*UPDATED
    1) sudo pip uninstall pyparsing
    2) sudo pip install https://pypi.python.org/packages/source/p/pyparsing/pyparsing-1.5.7.tar.gz
    3) sudo pip install -U pydot pyparsing==1.5.7
try to rosmake, if will not go through repeat above steps and do set 4:
    4) remove this line "pyparsing" from /Library/Python/2.7/site-packages/pydot-1.0.28-py2.7.egg-info/requires.txt or where you store site-packages.

Originally posted by Artem with karma: 709 on 2013-06-02
This answer was ACCEPTED on the original site
Post score: 2

